# drift-detector

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  requirements.txt  setup.py  setup_wizard.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: README.md
drift_detector/: __init__.py
drift_detector/config/: README.md  __init__.py  llm_config.py  secrets.py
drift_detector/core/: README.md  __init__.py  drift_detector_agent.py  session_storage.py
drift_detector/integrations/: README.md  __init__.py  crewai.py  langchain.py
drift_detector/ui/: __init__.py  frontend.html  frontend_v3_modern.html  frontend_v4_sessions.html  server.py
drift_detector/utils/: __init__.py  fuzzy_match.py
examples/: README.md  __init__.py  example_coding_agent.py  example_degradation_monitoring.py  example_medical_drift_detection.py  stress_test_drift_detector.py  test_crewai_with_drift.py  test_langchain_chain_real_groq.py  test_langchain_chain_with_drift.py
tests/: README.md  __init__.py  test_5_signals_comprehensive.py  test_5_signals_with_real_llms.py  test_crewai_integration.py  test_domain_aware_signals.py  test_fuzzy_match.py  test_langchain_integration.py  test_session_storage.py  test_stagnation_adaptive_window.py  test_task_type_thresholds.py  test_ui_server.py
