[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-detector-agent"
version = "2.0.1"
description = "Behavioral drift detection for LLM agents"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "MrPredic"}]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]
keywords = [
    "drift-detection", "llm", "agents", "monitoring", "behavioral-analysis",
    "langchain", "crewai", "agent-health", "model-monitoring",
    "llm-monitoring", "agent-observability", "loop-detection", "stagnation-detection",
    "langchain-callback", "crewai-integration", "ai-agent", "llm-agent",
    "agent-loop", "infinite-loop-detection", "vocabulary-drift", "output-monitoring"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
ui = [
    "fastapi>=0.80.0",
    "uvicorn>=0.17.4",
]
langchain = [
    "langchain>=0.1.0,<0.4.0",
    "langchain-openai>=0.0.0",
    "langchain-google-genai>=0.1.0",
]
crewai = [
    "crewai>=0.3.0",
]
all = [
    "fastapi>=0.80.0",
    "uvicorn>=0.17.4",
    "langchain>=0.1.0,<0.4.0",
    "langchain-openai>=0.0.0",
    "langchain-google-genai>=0.1.0",
    "crewai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/MrPredic/drift-detector"
Documentation = "https://github.com/MrPredic/drift-detector/tree/main/docs"
Repository = "https://github.com/MrPredic/drift-detector.git"
Issues = "https://github.com/MrPredic/drift-detector/issues"
